# bundestag-lobbyregister-api

./: CNAME  README.md  generator_config.yaml  index.html  openapi.yaml
python-client/: README.md  pyproject.toml  tox.ini
python-client/.openapi-generator/: FILES
python-client/deutschland/bundestag_lobbyregister/: __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  rest.py
python-client/docs/: Activity.md  Address.md  AddressCountry.md  ClientOrganization.md  DefaultApi.md  DetailedSearchResults.md  DetailedSearchResultsSearchParameters.md  Donator.md  DonatorDonationEuro.md  Entry.md  EntryAccount.md  EntryEmployeeCount.md  EntryFinancialExpensesEuro.md  Facet.md  FieldOfInterest.md  LegalForm.md  LegalRepresentative.md  LegislativeProject.md  LobbyistIdentity.md  Media.md  MediaMedia.md  NamedEmployee.md  NumberRange.md  SearchResult.md  SortOrder.md
python-client/sphinx-docs/: conf.py  index.rst
python-client/test/: test_activity.py  test_address.py  test_address_country.py  test_client_organization.py  test_default_api.py  test_detailed_search_results.py  test_detailed_search_results_search_parameters.py  test_donator.py  test_donator_donation_euro.py  test_entry.py  test_entry_account.py  test_entry_employee_count.py  test_entry_financial_expenses_euro.py  test_facet.py  test_field_of_interest.py  test_legal_form.py  test_legal_representative.py  test_legislative_project.py  test_lobbyist_identity.py  test_media.py  test_media_media.py  test_named_employee.py  test_number_range.py  test_search_result.py  test_sort_order.py
(+35 files in other folders)
